Bug 153016 - Duplicated comment with action description "Comment added" in .doc file with track changes on
Summary: Duplicated comment with action description "Comment added" in .doc file with ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, filter:doc, regression
: 154633 (view as bug list)
Depends on:
Blocks: Comments DOC-Track-Changes
  Show dependency treegraph
 
Reported: 2023-01-13 21:25 UTC by Marcin Segit
Modified: 2023-04-24 11:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Added/deleted comments (92.01 KB, image/jpeg)
2023-01-13 21:25 UTC, Marcin Segit
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcin Segit 2023-01-13 21:25:23 UTC
Description:
In a doc with track changes turned on after adding or deleting a comment and saving and closing the file upon reopening an additional comment appears stating "Comment added/deleted", thus doubling the number of comments in the text.

Steps to Reproduce:
1. Create doc file with Writer.
2. Type some text. 
3. Turn on track changes.
4. Make changes in the text.
5. Add a comment.
6. Save.
7. Quit.
8. Open the .doc file again.

Actual Results:
Additional comment appears.

Expected Results:
There is only one comment that was left by me.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.4.4.2 (x64) / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL
Comment 1 Marcin Segit 2023-01-13 21:25:58 UTC
Created attachment 184654 [details]
Added/deleted comments
Comment 2 Faisal 2023-01-19 09:03:03 UTC
Issue reproduced with:

Version: 7.4.4.2 (x64) / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_US); UI: en-US
Calc: CL

Issue cannot be reproduced with:

LibreOffice 3.4.5 
OOO340m1 (Build:502)

Also cannot be reproduced with:

LibreOffice 3.3.0
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

(For testing with v3.3.0, the file was saved as .doc for MS Office 1997/2000/XP)
Comment 3 raal 2023-01-19 16:51:09 UTC
This seems to have begun at the below commit.
Adding Cc: to László Németh; Could you possibly take a look at this one?
Thanks
 a7546e44a89d6e308d917d5f108b701366b61f4e is the first bad commit
commit a7546e44a89d6e308d917d5f108b701366b61f4e
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Mar 16 16:14:50 2022 +0100

    source 3a14b2040ecd95a23acbc3e8d0f8087505135f11

https://gerrit.libreoffice.org/c/core/+/131659
Comment 4 Stéphane Guillou (stragu) 2023-04-19 23:24:42 UTC
*** Bug 154633 has been marked as a duplicate of this bug. ***
Comment 5 Stéphane Guillou (stragu) 2023-04-19 23:29:18 UTC
Still reproducible in recent master build:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2023-04-21 08:54:09 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/77ce7aaa30d20abc1e6221a60ce5e69a52bfaf19

tdf#153016 sw DOC: don't export automatic redline comments

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-04-21 10:10:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/17e0439119695faf9b23526e47d58cd41d1cb996

tdf#153016 sw DOC: don't export automatic redline comments

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2023-04-21 12:50:44 UTC
@Marcin and All: thanks for the bug report, bibisection and other feedback!

Commit description:

tdf#153016 sw DOC: don't export automatic redline comments

DOC format doesn't support comments of change tracking, so DOC
export converts them to annotations. But skip this conversion
in case of automatic redline comments of tracked annotations
("Commend added" and "Comment deleted") to avoid of double
annotations (the original tracked annotation and the newly
added annotation of the comment of the change tracking).

Regression from commit 3a14b2040ecd95a23acbc3e8d0f8087505135f11
"tdf#148032 sw: add redline comment for tracked comments"
Comment 9 NISZ LibreOffice Team 2023-04-24 11:31:40 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded