tdf#153016 sw DOC: don't export automatic redline comments

DOC format doesn't support comments of change tracking, so DOC
export converts them to annotations. But skip this conversion
in case of automatic redline comments of tracked annotations
("Commend added" and "Comment deleted") to avoid of double
annotations (the original tracked annotation and the newly
added annotation of the comment of the change tracking).

Regression from commit 3a14b2040ecd95a23acbc3e8d0f8087505135f11
"tdf#148032 sw: add redline comment for tracked comments"

Change-Id: I563859d203886a7f81f6a9e1f164ea5524d80d1f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150735
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>